overlays/noprod/route-public-tls.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: keycloak-public-tls
  namespace: sso-noprod
  labels:
    app: keycloak
spec:
  host: sso-noprod.cclh.io
  to:
    kind: Service
    name: keycloak
    weight: 100
  port:
    targetPort: keycloak
  tls:
    termination: reencrypt
    certificate: |-
      $(CERTIFICATE)
    key: |-
      $(KEY)
    caCertificate: |-
      $(CA)
  wildcardPolicy: None
